# labs-term2

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: build.yml
Term_1/: CMakeLists.txt
Term_1/src/lab5/: array.c  ex1.c  ex3.c
Term_1/src/lab7/: header.h  main.c
Term_1/src/lab8/: functions.c  main.c
Term_2/src/lab1/: .gitignore  functions.c  header.h  main.c  page.html  sonar-project.properties
Term_2/src/lab1.1/: CMakeLists.txt  functions.c  header.h  main.c
Term_2/src/lab2/: functions.c  header.h  main.c
Term_2/src/lab2.2/: CMakeLists.txt  main.c
Term_2/src/untitled/: functions.c  header.h  main.c
Term_2/src/untitled1/: main.cpp
Term_2/src/untitled2/: main.cpp
Term_2/src/untitled3/: functions.c  header.h  main.c
VSCode/lab1/: 123.c
VSCode/lab2/: ex.c
VSCode/lab3/: ex1.c  ex2.c  ex3.c
VSCode/lab4/: ex1.c  ex2.c  ex3.c
VSCode/lab5/: array.h  ex1.c  ex2.c  ex3.c  header.h
VSCode/lab6/ex1/: main.c  (+1 more)
labor1/: labor1.sln
labor1/labor1/: 1.c  labor1.vcxproj  labor1.vcxproj.filters
labor2/: labor2.sln
labor2/labor2/: labor.c  labor2.vcxproj  labor2.vcxproj.filters
labor3/ex1/: ex1.sln
labor3/ex2/: ex2.sln
labor3/ex3/: ex3.sln
src/lab1/: CMakeLists.txt  README.md  functions.c  header.h  main.c
src/lab2/: .gitignore  README.md
src/lab3/: CMakeLists.txt  functions.c  header.h  main.c
src/lab4/: ex3.c  functions.c  header.h  main.c  tree_functions.c  treeheader.h
src/lab5/: array.c  ex1.c  ex2.c  ex3.c  header.h
src/lab7/: functions.c  header.h  main.c
src/lab8/: functions.c  header.h  main.c
(+105 files in other folders)
